# duplicata-checker

./: .gitignore  Makefile  main.py  pyproject.toml
core/: deduplicata.py
core/libs/explorers/: walk_explorer.py
core/libs/features/: feature_md5.py
duplicata_finder/: __main__.py  deduplicata.py
duplicata_finder/libs/explorers/: explorer.py  walk_explorer.py
duplicata_finder/libs/features/: feature_base.py  feature_md5.py
duplicata_finder/libs/stores/: in_memory_storage.py  storage_base.py
